# app/Models/FcmToken.php
@@ -1,0 +1,44 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+/**
+ * App\Models\User
+ *
+ * @property int $id
+ * @property int $user_id
+ * @property string $fcm_token
+ * @property string $device
+ */
+class FcmToken extends Model
+{
+    protected $table = 'user_firebase_tokens';
+
+    /**
+     * Indicates if the model should be timestamped.
+     *
+     * @var bool
+     */
+    public $timestamps = false;
+
+    /**
+     * The attributes that are mass assignable.
+     *
+     * @var array
+     */
+    protected $fillable = [
+        'user_id',
+        'fcm_token',
+        'device',
+    ];
+
+    /**
+     * Get the country of the region.
+     */
+    public function user()
+    {
+        return $this->belongsTo(User::class, 'user_id', 'id');
+    }
+}
